# Robot-Recruiter

./: .flake8  .gitignore  COLLABORATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  REALTIME_INTAKE_GUIDE.md  WINDOWS_SETUP.md  alembic.ini  coverage.xml  debug_token.py  demo_realtime_intake.py  env.template  migrate_project.py  pyproject.toml  pytest.ini  repo_analyzer.py  requirements.txt  robot_recruiter.db  scrape_chainsafe_repos.py  setup.py  test_continuous_learning.py  test_oauth.py  test_realtime_intake.py  test_repository_analysis.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0942d2b782e2_add_review_workflow_enhancements_with_.py  0de046203226_add_voice_notes_tables_for_audio_.py  3ca67c58cd8c_add_vector_tables_for_semantic_search.py  88508e0133e5_update_chatgptinteraction_and_feedback_.py  9d25e17f94c4_switch_users_and_all_related_fks_to_.py  continuous_learning_feedback_tables.py  create_core_tables.py  e95e4c1caf17_merge_continuous_learning_feedback_.py  f6330a4943fe_merge_heads_after_core_tables.py
caliptra_test_output/: analysis_results.json  contributors.csv  recruiting_data.json  repositories.csv
docs/: 1password_integration.md  api.md  candidate_database.md  installation.md  integration.md  usage.md
examples/: ai_recruiting_integration.py  seed_demo_data.py
models/: candidate_matching_v20250703_184304.pkl  placement_success_prediction_v20250703_184304.pkl  question_generation_v20250703_184304.pkl
opentitan_test_output/: contributors.csv  repositories.csv
scripts/: batch_embed_candidates.py  seed_candidates.py
src/github_talent_intelligence/: __init__.py  api.py  candidate_cli.py  candidate_db.py  cli.py  config.yaml  config_loader.py  continuous_learning.py  db.py  embedding_service.py  feedback_cli.py  github_oauth.py  gpt_stub.py  realtime_intake.py  recruiting.py  review_cli.py  review_workflow.py  talent_intelligence.py  token_manager.py  voice_notes.py
tests/: conftest.py  test_candidate_db.py  test_feedback_integration.py  test_hybrid_db.py  test_recruiting_integration.py  test_review_workflow.py  test_talent_intelligence.py  test_token_manager.py  test_voice_notes.py
